--- a/resources/css/other.css
+++ b/resources/css/other.css
@@ -39,7 +39,7 @@
   display: block;
   text-decoration: none;
   text-align: center;
-  color: #DBCD7F;
+  color: #3c0e61;
   background-color: #DB74BD;
   padding: 1em;
   margin-bottom: 0.2em;
