--- a/views/fragments/footer.ejs
+++ b/views/fragments/footer.ejs
@@ -8,10 +8,8 @@
     <br>
     <small>
         <p>&copy; AllMuzica. Toate drepturile rezervate. 
-            <br> Ultima actualizare: <time datetime="2022-10-15 14:30">15 octombire 2022, 14:30</time>
-            <br>
-            Stock footage provided by <a class="link author-link-popup" target="_blank" href="https://www.videvo.net/profile/videvo">Videvo</a>,
-            downloaded from <a class="videvo-redirect" target="_blank" href="https://www.videvo.net">videvo.net</a>   
+            <br> Ultima actualizare: <time datetime="2023-02-08 20:48">8 februarie 2023, 20:48</time>
+            <br> <a href="/terms_conds">Termeni și condiții</a> &nbsp;|&nbsp; <a href="/privacy_policy">Politică de confidențialitate</a>
             <br> <%- locals.CC_BY %>
         </p>
     </small>
