--- a/views/fragments/header.ejs
+++ b/views/fragments/header.ejs
@@ -62,18 +62,8 @@
                 <li><a href="/galery_pg">Galerie</a></li>
                 <li><a href="/history">Istoria magazinului</a></li>
                 <li><a href="/contact">Contact</a></li>
-                <% if(locals.utilizator && locals.utilizator.rol=="admin") { %>
-                    <li><a href="/useri">Useri</a></li>
-                <% } %>
-                <% if(locals.utilizator) { %>
-                    <li><div><%- locals.utilizator.username %></div>
-                        <ul>
-                            <li><a href="/profil">Profil</a></li>
-                            <li><a href="/logout">Logout</a></li>
-                        </ul>
-                    </li>
-                <% } %>
-    
+                <li><a href="/terms_conds">Termeni și condiții</a></li>
+                <li><a href="/privacy_policy" style="font-size: smaller;">Politică de confidențialitate</a></li>
             </ul>
         </li>
         
@@ -81,9 +71,15 @@
         <% if(locals.utilizator) { %>
             <li><div>Logat: <%- locals.utilizator.username%></div>
                 <ul>
+                    <li><a href="/profile">Profil</a></li>
+                    <li><a href="/deleteuser">Ștergerea contului</a></li>
                     <li><a href="/logout">Delogare</a></li>
                 </ul>
             </li>
+        <% } %>
+        <% if(locals.utilizator && locals.utilizator.role == "admin") { %>
+            <li><a href="/users"><div>Utilizatori</div></a></li>
+            <li><a href="/prodadmin"><div>Administrare</div></a></li>    
         <% } %>
     </ul>
 </nav>
