--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -712,150 +712,55 @@ nav.metal ul.menu a {
   animation-name: banner_animation_metal;
 }
 
-html {
-  font-family: "Noto Sans", sans-serif;
-  font-size: 18px;
-  scroll-behavior: smooth;
-}
-
-body {
-  background-color: #dbb6f1;
-  color: #3c0e61;
-  transition: font-size 0.5s linear;
-}
-body a {
-  color: #11610e;
-}
-body a:hover {
-  color: #771c1c;
-}
-body p::selection, body td::selection, body th::selection, body figcaption::selection, body address::selection, body i::selection, body s::selection, body em::selection, body strong::selection, body h1::selection, body h2::selection, body h3::selection, body h4::selection, body h5::selection {
-  background-color: #DB74BD;
-  color: #675EDB;
-  text-shadow: -1px -2px 1px #3c0e61;
-}
-
-main {
-  margin: 2em;
-}
-main span {
-  position: relative;
-  z-index: -1;
-}
-
-header, footer {
+#userprofile h2 {
   text-align: center;
 }
-
-header {
-  height: 7.5em;
-}
-header h1 {
-  position: relative;
-  top: 1em;
-}
-header #login_form {
-  display: inline-block;
-  position: absolute;
-  top: 1em;
-  left: 3em;
-  text-align: left;
-}
-header #login_form label {
-  padding-right: 0.5em;
-}
-header #login_form input:not([type=submit]) {
-  float: right;
+#userprofile h3 {
+  margin-top: 0;
 }
 
-#grid {
+#big_profile_flex {
+  margin: 2em;
+  padding: 0;
   display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  grid-gap: 0.5em;
-  grid-template-areas: "f-desc f-desc f-desc f-desc" "z-oferte z-oferte f-calendar f-calendar" "z-oferte z-oferte f-anunturi f-anunturi" "f-users f-stats f-stats f-data" "f-other f-other f-other f-other";
+  grid-template-columns: 1fr 1fr;
+  gap: 2em;
 }
-#grid > * {
+#big_profile_flex > * {
   border: 5px dotted #675EDB;
   padding-left: 20px;
   padding-right: 20px;
 }
 
-#desc {
-  grid-area: f-desc;
+form {
+  display: inline-block;
+  text-align: left;
 }
-#desc > figure {
+form label {
+  padding-right: 0.5em;
+}
+form input:not([type=submit], [type=reset]), form select {
   float: right;
 }
 
-#oferte {
-  grid-area: z-oferte;
+#profile_flex {
+  display: grid;
+  grid-template-areas: "photo photo" "text1 text2";
+  grid-template-columns: 1fr 1fr;
 }
-
-#calendar {
-  grid-area: f-calendar;
+#profile_flex div:nth-child(1) {
+  grid-area: photo;
+  text-align: center;
+  position: relative;
+  top: 30%;
+  z-index: -1;
 }
-
-#anunturi {
-  grid-area: f-anunturi;
+#profile_flex div:nth-child(1) img {
+  border: 4px solid black;
 }
-
-#users {
-  grid-area: f-users;
+#profile_flex div:nth-child(2) {
+  grid-area: text1;
 }
-
-#stats {
-  grid-area: f-stats;
-}
-#stats figure {
-  margin: 0;
-  padding: 0;
-}
-#stats figure img {
-  border: 5px solid black;
-}
-
-#data {
-  grid-area: f-data;
-}
-
-#other {
-  grid-area: f-other;
-}
-
-#watermark {
-  display: none;
-}
-
-@media screen and (max-width: 1300px) {
-  body {
-    font-size: 90%;
-    transition: font-size 0.5s linear;
-  }
-  #grid {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    grid-template-areas: "f-desc f-desc f-desc" "z-oferte z-oferte f-calendar" "f-anunturi f-anunturi f-anunturi" "f-users f-stats f-data" "f-other f-other f-other";
-  }
-}
-@media screen and (max-width: 700px) {
-  body {
-    font-size: 80%;
-    transition: font-size 0.5s linear;
-    animation: none;
-  }
-  #grid {
-    display: grid;
-    grid-template-columns: minmax(0, 1fr);
-    grid-template-areas: "f-desc" "z-oferte" "f-calendar" "f-anunturi" "f-users" "f-stats" "f-data" "f-other";
-  }
-  header {
-    height: unset;
-  }
-  header h1 {
-    position: static;
-    float: unset;
-  }
-  header #login_form {
-    position: static;
-  }
+#profile_flex div:nth-child(3) {
+  grid-area: text2;
 }
