--- a/resources/css/theme-picker.css
+++ b/resources/css/theme-picker.css
@@ -54,11 +54,11 @@
   transform: scale(1.3);
 }
 #theme-picker ul > li:nth-child(2) {
-  background: linear-gradient(150deg, #F0CF91 0%, #A38752 25%, #416CA3 50%, #ebffb3 75%, #90BAF0 100%);
+  background: linear-gradient(150deg, #F0CF91 0%, #493d26 25%, #4975af 50%, #606e3a 75%, #90BAF0 100%);
 }
 #theme-picker ul > li:nth-child(3) {
-  background: linear-gradient(150deg, #C26D29 0%, #F5B21B 25%, #5C4F33 50%, #1BF59C 75%, #5a948c 100%);
+  background: linear-gradient(150deg, #f7af75 0%, #534115 25%, #bd3d3d 50%, #1d6b4c 75%, #4bc5b5 100%);
 }
 #theme-picker ul > li:nth-child(4) {
-  background: linear-gradient(150deg, black 0%, #792020 25%, #490349 50%, #c1c424 75%, #2a42ad 100%);
+  background: linear-gradient(150deg, black 0%, #db1515 25%, #490349 50%, #c1c424 75%, #303033 100%);
 }
