--- a/resources/scss/_vars.scss
+++ b/resources/scss/_vars.scss
@@ -1,43 +1,43 @@
-$color-1: #6f418b;
-$color-2: #DBCD7F;
+$color-1: #dbb6f1;
+$color-2: #3c0e61;
 $color-3: #675EDB;
-$color-4: #5ac048;
+$color-4: #11610e;
 $color-5: #DB74BD;
-$color-6: #a8e635;
-$filter-error: yellow;
+$color-6: #771c1c;
+$filter-error: rgb(255, 0, 0);
 
-$color-1-dark: #0E0E2E;
-$color-2-dark: #a78144;
-$color-3-dark: #2E2210;
-$color-4-dark: #747A18;
-$color-5-dark: #2B2E0B;
-$color-6-dark: #A9B324;
-$filter-error-dark: orange;
+$color-1-dark: #070718;
+$color-2-dark: #e2a747;
+$color-3-dark: #b85d09;
+$color-4-dark: #91991f;
+$color-5-dark: #201e1d;
+$color-6-dark: #cbd62b;
+$filter-error-dark: rgb(255, 0, 0);
 
 $color-1-pastel: #F0CF91;
-$color-2-pastel: #A38752;
-$color-3-pastel: #416CA3;
-$color-4-pastel: #ebffb3;
+$color-2-pastel: #493d26;
+$color-3-pastel: #4975af;
+$color-4-pastel: #606e3a;
 $color-5-pastel: #90BAF0;
-$filter-error-pastel: navy;
+$filter-error-pastel: rgb(255, 0, 0);
 
-$color-1-fire: #C26D29;
-$color-2-fire: #F5B21B;
-$color-3-fire: #5C4F33;
-$color-4-fire: #1BF59C;
-$color-5-fire: #5a948c;
-$filter-error-fire: teal;
+$color-1-fire: #f7af75;
+$color-2-fire: #534115;
+$color-3-fire: #bd3d3d;
+$color-4-fire: #1d6b4c;
+$color-5-fire: #4bc5b5;
+$filter-error-fire: rgb(255, 0, 0);
 
 $color-1-metal: black;
-$color-2-metal: #792020;
+$color-2-metal: #db1515;
 $color-3-metal: #490349;
 $color-4-metal: #c1c424;
-$color-5-metal: #2a42ad;
+$color-5-metal: #303033;
 $color-6-metal: #2b4de2;
-$filter-error-metal: #df8129;
+$filter-error-metal: rgb(255, 0, 0);
 
 $button-height: 30px;
-$button-width: 210px;
+$button-width: 250px;
 $button-distance: 15px;
 $border-width: 2px;
 
